--- a/src/App.css
+++ b/src/App.css
@@ -156,7 +156,11 @@ label.custom-control-label {
   width: 100%;
   height: 100%;
   background: #60a3bc !important;
-  padding-bottom: 100px;
+  /* padding-bottom: 100px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 400px;
 }
 .anhoff{
   width: 40px;
@@ -235,3 +239,39 @@ label.custom-control-label {
   font-size: 20px;
 }
 /* end ap bieu do   */
+
+/* model  */
+.modal-title {
+  margin-bottom: 0;
+  /* line-height: 1.5; */
+  color: red;
+}
+
+.modal-body {
+  position: relative;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 1rem;
+  color: #d31313;
+  font-size: 23px;
+  font-weight: bold;
+}
+
+/* menu dien thoai  */
+.phan-menu-dienthoai
+{
+  background-color: #2a2a2a;
+  margin-left: 25px;
+  margin-right: 25px;
+  border-radius: 10px;
+  padding: 10px;
+}
+.col-3.text-center {
+  color: white;
+  font-size: 5px;
+}
+.btn.dropdown-toggle {
+  color: white;
+  font-size: 17px;
+  margin-left: -12px;
+}
